--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -7,6 +7,8 @@
     <script async data-main="{% static 'mainpage/mainpage.js' %}" src="{% static 'node_modules/requirejs/require.js' %}"></script>
 </head>
 <body>
-
+<button id="add-friend">Add Friend</button>
+<ul id="friends-list">
+</ul>
 </body>
 </html>
