escape in template

--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -20,8 +20,8 @@
 </div>
 
 <script id="newsitem-row-template" type="text/html">
-    <td><%= source %></td>
-    <td><%= text %></td>
+    <td><%- source %></td>
+    <td><%- text %></td>
 </script>
 </body>
 </html>
