--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -2,23 +2,59 @@
 {% load staticfiles %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title></title>
+    <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
     <script async data-main="{% static 'mainpage/mainpage.js' %}"
             src="{% static 'node_modules/requirejs/require.js' %}"></script>
 </head>
 <body>
-<div id="main-table">
-    <ul>
-        <li><a class="link-prev">Prev</a></li>
-        <li><a class="link-next">Next</a></li>
-    </ul>
-    <table>
-        <thead></thead>
-        <tbody></tbody>
-    </table>
-</div>
+<nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
+<div class="container">
+    <div class="starter-template">
+        <h1>News Items</h1>
 
+        <div id="main-table">
+            <ul>
+                <li><a class="link-prev">Prev</a></li>
+                <li><a class="link-next">Next</a></li>
+            </ul>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Source</th>
+                    <th>Text</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <script id="newsitem-row-template" type="text/html">
     <td><%- source %></td>
     <td><%- text %></td>
