--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -34,20 +34,34 @@
         <!--/.nav-collapse -->
     </div>
 </nav>
-<div class="container">
-    <div class="starter-template">
-        <div id="main-table" class="panel panel-default">
+<div class="row">
+    <div class="col-md-2">
+        <div id="facets" class="panel panel-default">
             <div class="panel-heading">
-                <strong>News Items</strong>
-
-                <div class="btn-group btn-group-xs pull-right" role="group">
-                    <a class="link-prev btn btn-default" role="button"><span
-                            class="glyphicon glyphicon-chevron-left"></span></a>
-                    <a class="link-next btn btn-default" role="button"><span
-                            class="glyphicon glyphicon-chevron-right"></span></a>
-                </div>
+                <strong>Facets</strong>
             </div>
             <div class="list-group">
+                <div class="source-facets well list-group-item">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-10">
+        <div class="starter-template">
+            <div id="main-table" class="panel panel-default">
+                <div class="panel-heading">
+                    <strong>News Items</strong>
+
+                    <div class="btn-group btn-group-xs pull-right" role="group">
+                        <a class="link-prev btn btn-default" role="button"><span
+                                class="glyphicon glyphicon-chevron-left"></span></a>
+                        <a class="link-next btn btn-default" role="button"><span
+                                class="glyphicon glyphicon-chevron-right"></span></a>
+                    </div>
+                </div>
+                <div class="list-group">
+                </div>
             </div>
         </div>
     </div>
