--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -8,8 +8,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>NAGG</title>
     <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
-    <script async data-main="{% static 'mainpage/mainpage.js' %}"
-            src="{% static 'node_modules/requirejs/require.js' %}"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-static-top">
@@ -50,14 +48,24 @@
     <div class="col-md-10">
         <div class="starter-template">
             <div id="main-table" class="panel panel-default">
-                <div class="panel-heading">
-                    <strong>News Items</strong>
+                <div class="panel-heading clearfix">
+                    <h4 class="panel-title pull-left"><strong>News Items</strong></h4>
 
                     <div class="btn-group btn-group-xs pull-right" role="group">
                         <a class="link-prev btn btn-default" role="button"><span
                                 class="glyphicon glyphicon-chevron-left"></span></a>
                         <a class="link-next btn btn-default" role="button"><span
                                 class="glyphicon glyphicon-chevron-right"></span></a>
+                    </div>
+                </div>
+                <div class="panel-heading clearfix">
+                    <span class="nr-hits">0</span><span> Hits</span>
+                </div>
+                <div class="panel-heading clearfix input-group">
+                    <input type="search" class="search-box form-control" placeholder="Search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-primary"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-primary"><i class="glyphicon glyphicon-wrench"></i></button>
                     </div>
                 </div>
                 <div class="list-group">
@@ -88,5 +96,7 @@
         <% }%>
     </div>
 </script>
+<script async data-main="{% static 'mainpage/mainpage.js' %}"
+        src="{% static 'node_modules/requirejs/require.js' %}"></script>
 </body>
 </html>
