--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -64,7 +64,7 @@
                 <div class="panel-heading clearfix input-group">
                     <input type="search" class="search-box form-control" placeholder="Search">
                     <div class="input-group-btn">
-                        <button class="btn btn-primary"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="search-box-clear-button btn btn-primary"><i class="glyphicon glyphicon-remove-circle"></i></button>
                         <button class="btn btn-primary"><i class="glyphicon glyphicon-wrench"></i></button>
                     </div>
                 </div>
