Much nicer query param handling with Model

--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="panel-heading clearfix">
-                    <span class="nr-hits">0</span><span> Hits</span>
+                    <span class="nr-hits">0</span><span> Hits Page: </span><span class="page-number">1</span>
                 </div>
                 <div class="panel-heading clearfix input-group">
                     <input type="search" class="search-box form-control" placeholder="Search">
