Separate paging logic from view to the new model also add total

--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -59,12 +59,15 @@
                     </div>
                 </div>
                 <div class="panel-heading clearfix">
-                    <span class="nr-hits">0</span><span> Hits Page: </span><span class="page-number">1</span>
+                    <span class="nr-hits">0</span> Hits Page: <span class="page-number">1</span>/<span
+                        class="page-max">1</span>
                 </div>
                 <div class="panel-heading clearfix input-group">
                     <input type="search" class="search-box form-control" placeholder="Search">
+
                     <div class="input-group-btn">
-                        <button class="search-box-clear-button btn btn-primary"><i class="glyphicon glyphicon-remove-circle"></i></button>
+                        <button class="search-box-clear-button btn btn-primary"><i
+                                class="glyphicon glyphicon-remove-circle"></i></button>
                         <button class="btn btn-primary"><i class="glyphicon glyphicon-wrench"></i></button>
                     </div>
                 </div>
