--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -1,38 +1,6 @@
-<!DOCTYPE html>
+{% extends 'mainpage/base.html' %}
 {% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>NAGG</title>
-    <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
-</head>
-<body>
-<nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">.N.A.G.G.</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
-<div class="row">
+{% block content %}
     <div class="col-md-2">
         <div id="facets" class="panel panel-default">
             <div class="panel-heading">
@@ -76,7 +44,8 @@
             </div>
         </div>
     </div>
-</div>
+{% endblock %}
+{% block scripts %}
 <script id="newsitem-row-template" type="text/html">
     <% var lines = obj.text.split('\n'); %>
     <% var arrowClass = obj._expanded ? 'glyphicon-chevron-up' : 'glyphicon-chevron-down'; %>
@@ -101,5 +70,4 @@
 </script>
 <script async data-main="{% static 'mainpage/mainpage.js' %}"
         src="{% static 'node_modules/requirejs/require.js' %}"></script>
-</body>
-</html>
+{% endblock %}
