--- a/mainpage/templates/mainpage/base.html
+++ b/mainpage/templates/mainpage/base.html
@@ -27,6 +27,7 @@
             <ul class="nav navbar-nav">
                 <li id="home-nav"><a href="/">Home</a></li>
                 <li id="collections-nav"><a href="collections">Collections</a></li>
+                <li id="status-nav"><a href="status">Status</a></li>
 {#                <li><a href="#contact">Contact</a></li>#}
             </ul>
         </div>
